# ableton-snes-spc

./: .editorconfig  .gitignore  AbletonSnesSpc.sln  README.md  build-vst3.ps1  setup-vst3-sdk.ps1
docs/: API_REFERENCE.md  REFERENCES.md  SPC_FORMAT.md  USER_GUIDE.md
docs/architecture/: technical-architecture.md
docs/formats/: spcx-specification.md
docs/guides/: ABLETON_LIVE_COMPATIBILITY.md  SPC_EDITING_WORKFLOW.md
docs/plans/: roadmap.md
docs/research/: research-notes.md
src/SpcPlugin.Core/: SpcPlugin.Core.csproj  rd.xml
src/SpcPlugin.Core/Analysis/: SpcAnalyzer.cs
src/SpcPlugin.Core/Audio/: BrrCodec.cs  SpcEngine.cs  SpcExporter.cs
src/SpcPlugin.Core/Editing/: SpcEditor.cs
src/SpcPlugin.Core/Effects/: SampleEffects.cs
src/SpcPlugin.Core/Emulation/: SDsp.cs  Spc700.cs
src/SpcPlugin.Core/Formats/: SpcxFile.cs
src/SpcPlugin.Core/Interop/: NativeExports.cs
src/SpcPlugin.Core/Midi/: MidiProcessor.cs  MidiTypes.cs
src/SpcPlugin.Core/Presets/: PresetManager.cs  SpcPreset.cs
src/SpcPlugin.Core/Project/: ProjectManager.cs
src/SpcPlugin.Core/RealTime/: RealtimeSampleEditor.cs
src/SpcPlugin.Core/UI/: PluginViewModel.cs  SampleBrowserViewModel.cs  WaveformDisplay.cs
tests/SpcPlugin.Tests/: MidiTests.cs  PresetTests.cs  SampleEffectsTests.cs  SpcPlugin.Tests.csproj  UIViewModelTests.cs
tests/SpcPlugin.Tests/Analysis/: SpcAnalyzerTests.cs
tests/SpcPlugin.Tests/Audio/: BrrCodecTests.cs
tests/SpcPlugin.Tests/Emulation/: Spc700Tests.cs
tests/SpcPlugin.Tests/Project/: ProjectManagerTests.cs
tools/: generate_icon.py
vst3/: CMakeLists.txt  README.md
vst3/resource/: spc_editor.uidesc
vst3/src/: dotnet_host.cpp  dotnet_host.h  spc_controller.cpp  spc_controller.h  spc_factory.cpp  spc_ids.h  spc_messages.h  spc_params.h  spc_processor.cpp  spc_processor.h
vst3/src/gui/: keyboard_handler.cpp  keyboard_handler.h  midi_learn.cpp  midi_learn.h  preset_browser.cpp  preset_browser.h  spc_editor.cpp  spc_editor.h  spectrum_view.cpp  spectrum_view.h  view_switcher.cpp  view_switcher.h  waveform_view.cpp  waveform_view.h
~docs/session-logs/: 2025-01-22-session-01.md  2026-01-04-session-01.md  2026-01-04-session-02.md  2026-01-04-session-03.md  2026-01-05-session-01.md  2026-01-05-session-02.md  2026-01-05-session-03.md  2026-01-05-session-04.md  2026-01-05-session-05.md  2026-01-05-session-06.md
~manual-testing/: VST3_TESTING_GUIDE.md
